jwt authorization update
